; ModuleID = '/home/carl/AnghaBench/systemd/src/core/extr_automount.c_automount_add_extras.c'
source_filename = "/home/carl/AnghaBench/systemd/src/core/extr_automount.c_automount_add_extras.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*)* @automount_add_extras to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @automount_add_extras(i32* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32*, align 8
  %4 = alloca i32, align 4
  store i32* %0, i32** %3, align 8
  %5 = load i32*, i32** %3, align 8
  %6 = call i32 @automount_set_where(i32* %5)
  store i32 %6, i32* %4, align 4
  %7 = load i32, i32* %4, align 4
  %8 = icmp slt i32 %7, 0
  br i1 %8, label %9, label %11

9:                                                ; preds = %1
  %10 = load i32, i32* %4, align 4
  store i32 %10, i32* %2, align 4
  br label %28

11:                                               ; preds = %1
  %12 = load i32*, i32** %3, align 8
  %13 = call i32 @automount_add_trigger_dependencies(i32* %12)
  store i32 %13, i32* %4, align 4
  %14 = load i32, i32* %4, align 4
  %15 = icmp slt i32 %14, 0
  br i1 %15, label %16, label %18

16:                                               ; preds = %11
  %17 = load i32, i32* %4, align 4
  store i32 %17, i32* %2, align 4
  br label %28

18:                                               ; preds = %11
  %19 = load i32*, i32** %3, align 8
  %20 = call i32 @automount_add_mount_dependencies(i32* %19)
  store i32 %20, i32* %4, align 4
  %21 = load i32, i32* %4, align 4
  %22 = icmp slt i32 %21, 0
  br i1 %22, label %23, label %25

23:                                               ; preds = %18
  %24 = load i32, i32* %4, align 4
  store i32 %24, i32* %2, align 4
  br label %28

25:                                               ; preds = %18
  %26 = load i32*, i32** %3, align 8
  %27 = call i32 @automount_add_default_dependencies(i32* %26)
  store i32 %27, i32* %2, align 4
  br label %28

28:                                               ; preds = %25, %23, %16, %9
  %29 = load i32, i32* %2, align 4
  ret i32 %29
}

declare dso_local i32 @automount_set_where(i32*) #1

declare dso_local i32 @automount_add_trigger_dependencies(i32*) #1

declare dso_local i32 @automount_add_mount_dependencies(i32*) #1

declare dso_local i32 @automount_add_default_dependencies(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
